--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Build
         run: |
-          go build -o hello .
+          go build -o hello_${{ github.ref_name }} .
 
       - name: Run
         run: |
-          ./hello
+          ./hello_hello_${{ github.ref_name }}
