--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,19 +20,18 @@ jobs:
           go-version: 1.22
 
 
-      - name: Build x86_64
+      - name: Build x86_64 (Intel-based Macs)
         run: |
           go build -o hello_${{ github.ref_name }}_x86_64 .
 
-      - name: Run x86_64
-        run: |
-          ./hello_${{ github.ref_name }}_x86_64
-
-
-      - name: Build arm64
+      - name: Build arm64 (Apple Silicon Macs)
         run: |
           GOOS=darwin GOARCH=arm64 go build -o hello_${{ github.ref_name }}_arm64 .
 
-      - name: Run arm64
-        run: |
-          ./hello_${{ github.ref_name }}_arm64
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            hello_${{ github.ref_name }}_x86_64
+            hello_${{ github.ref_name }}_arm64
