--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,6 +35,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
+          body_path: tmp.txt
           files: |
             hello_${{ github.ref_name }}_x86_64
             hello_${{ github.ref_name }}_arm64
