--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,6 +31,10 @@ jobs:
         run: |
           GOOS=darwin GOARCH=arm64 go build -o hello_${{ github.ref_name }}_arm64 .
 
+      - name: perl -v
+        run: |
+          perl -v
+
 
       - name: Release
         uses: softprops/action-gh-release@v2
