--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Build x86_64 (Intel-based Macs)
         run: |
-          go build -o hello_${{ github.ref_name }}_x86_64 .
+          GOOS=darwin GOARCH=amd64 go build -o hello_${{ github.ref_name }}_x86_64 .
 
 
       - name: Create release_description.txt
